<resources>
    <string name="app_name">Hawabazz-Design</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Location</string>
    <string name="title_section3">Food Menu</string>
    <string name="title_section4">Order History</string>
    <string name="title_section5">Notification</string>
    <string name="title_section6">My Location</string>
    <string name="title_section7">Register</string>
    <string name="title_section8">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">+</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu1">Track Order</string>
    <string name="menu2">Cancel Order</string>
    <string name="menu3">Call CustomerCare</string>
</resources>
