<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_example" android:title="@string/action_example"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/trackorder" android:title="@string/menu1"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/cancelorder" android:title="@string/menu2"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/callcare" android:title="@string/menu3"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
